--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ushin – univeral shared information – is a language of compassion</title>
-	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+	<link rel="stylesheet" type="text/css" href="styles/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
@@ -39,7 +39,8 @@
 
 </main>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="scripts/vendor/jquery-3.3.1.min.js"></script>
+<script>window.$ = window.jQuery = require('./scripts/vendor/jquery-3.3.1.min.js');</script>
 <script src="scripts/main.js"></script>
 
 </body>
